# ETFAdvisor

./: .gitignore  .gitmodules  README.md  SETUP.md  USAGE.md  etf_data.json  etf_data_sample.json  etf_data_with_embeddings_SBERTsample.json  etf_data_with_embeddings_googlesample.json  etf_tickers.json  google_key.json  portfolio.json  pyproject.toml  sample_portfolio.json  test_bench.py
ETF_recommender/: ETF_recommender.py  ETF_recommender_google.py  gcp_ops.py  get_embeddings_google.py  get_summary.py  testbench.ipynb
code_archive/: get_embeddings_sbert.py  st_search_ETFs copy.py
code_py/: ETF_recommender copy.py  ETF_recommender.py  compare_similarities.py  create_sample_fund.py  edit_buckets.py  fund_builder.py  get_embeddings.py  get_embeddings_google.py  get_summary.py
code_py/archive/: ETF_recommender_SBERT.py  ETF_recommender_openAI.py  get_embeddings_google.py  testbench.py
data_archive/: etf_tickers.json
st_app/: config.py  example_four.py  requirements.txt  st_allocation.py  st_app.py  st_edit_bucket.py  st_edit_portfolio.py  st_home.py  st_rebalance.py  st_rebalance_buckets.py  st_rebalance_etfs.py  st_recommender.py  st_recommender2.py  st_search_ETFs.py
web_app/: app.py  change_allocation.py  etf_recommender.py  home.py  portfolio.json  rebalance.py
