[tool.poetry]
name = "etfadvisor"
version = "0.1.0"
description = "ETF Investment Advice for the Modern Investor."
license = "MIT"
authors = ["Prashant <pmohite@uw.edu>"]
packages = [
    { include = "etfadvisor" },
]
include = ['data/*.csv']
readme = "README.md"
repository = "https://github.com/pizzadou9h/etfadvisor"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
]